# My3dPhoto

./: CMakeLists.txt  readme.txt
3rd/GMS-Feature-Matcher/include/: gms_matcher.h  gms_matcher_m3d.h  gms_matcher_prevent_pcl_ambiguous.h
3rd/cube2equirect-master/shaders/: myFragment.h
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
data/19102111s1/: intrinsic.txt  renamecds.sh
data/19102111s1/Params/: default.txt
debug/: CMakeLists.txt  backProject2PclPc.h  debug10GenerateResult.cpp  debug10ViewResult.cpp  debug11Representation.cpp  debug2FeatureExtractor.cpp  debug3FeatureMatcher.cpp  debug4GraphInitializer.cpp  debug4OverlapEstimator.cpp  debug5PoseNLLSOptimizer.cpp  debug6CompareRodriguesEulerAngle.cpp  debug6Cubemap2Sphere.cpp  debug6PanoramaCapturer.cpp  debug6PanoramaWarper.cpp  debug7PanoramaStitcher.cpp  debug8BackLayerContentGenerator.cpp  debug9Viewer.cpp  debugCurrent.cpp  debugMedianBlur.cpp  debugPclLib.cpp  testCmake.cpp
debug/unit_test/: 6GlfwManagerForWarper.h  6OpenglManagerForWarper.cpp  6PanoramaWarper.cpp  6PanoramaWarper.h  6ShaderForWarper.h  CMakeLists.txt  test0Cmake.cpp  test1ReadFrameData.cpp  test2FeatureExtractor.cpp  test3GmsFilter.cpp  test6SphereProjection.cpp  test7Stitcher.cpp  test8Inpainting.cpp
include/: 0CameraParameters.h  0DisjointSet.h  0Filters.h  0Frame.h  0Graph.h  0Rotation.h  0m3d.h  0transform.h  1FileNameExtractor.h  1FrameReader.h  1Logger.h  2FeatureExtractor.h  3FeatureMatcher.h  4GraphInitializer.h  4OverlapEstimator.h  5DepthDeformer.h  5PoseNLLSOptimizer.h  6Cubemap2Sphere.h  6CubemapCapturer.h  6GlfwManagerForCapturer.h  6GlfwManagerForWarper.h  6OpenglManagerForWarper.h  6PanoramaCapturer.h  6PanoramaWarper.h  6ShaderForCapturer.h  6ShaderForWarper.h  7GcoStitchingSolver.h  7PanoramaStitcher.h  8BackLayerContentGenerator.h  9CameraForViewer.h  9ShaderForViewer.h  9Viewer.h  9generateTrianglesFromPanorama.h
src/: 0Filters.cpp  0m3d.cpp  0transform.cpp  1FrameReader.cpp  1Logger.cpp  4GraphInitializer.cpp  4OverlapEstimator.cpp  6Cubemap2Sphere.cpp  6CubemapCapturer.cpp  6OpenglManagerForWarper.cpp  6PanoramaCapturer.cpp  6PanoramaWarper.cpp  7GcoStitchingSolver.cpp  7PanoramaStitcher.cpp  8BackLayerContentGenerator.cpp  9Viewer.cpp  9generateTrianglesFromPanorama.cpp
trial/: 4RotationCosts.h  4RotationInitializer.cpp  4RotationInitializer.h  7LabelsFromErrors.h  7PenaltiesGenerator.cpp  7PenaltiesGenerator.h  CMakeLists.txt  debug4RotationInitializer.cpp  opencv_blender_imp.cpp  testCostFunctor.cpp  testCostFunctor.h  testDefineTypedef.cpp  testDetails.cpp  testMultiband.cpp  testMultiband1.cpp  testRotations.cpp  testStitchViaGco.cpp
